# airsim_api

airsim_ros_interface/: CMakeLists.txt  package.xml
airsim_ros_interface/src/: airsim_collision_node.cpp
